Quotes plash screen and  app bar customisation

--- a/app/src/main/res/layout/quotes_cell.xml
+++ b/app/src/main/res/layout/quotes_cell.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:focusable="true"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:clickable="true"
-    android:background="@drawable/customborder"
+    android:gravity="center"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
@@ -21,8 +22,7 @@
         android:paddingTop="10dp"
         android:text="TextView"
         android:textColor="@color/title"
-        android:textStyle="bold"
-        android:textSize="22dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/quotesAuthor"
