--- a/app/src/main/res/layout/quotes_card_cell.xml
+++ b/app/src/main/res/layout/quotes_card_cell.xml
@@ -12,6 +12,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
@@ -24,8 +25,8 @@
             android:paddingTop="10dp"
             android:text="TextView"
             android:textColor="@color/title"
-            android:textSize="22dp"
-            android:textStyle="bold" />
+            android:textSize="18dp"
+             />
 
         <TextView
             android:id="@+id/qt_qu"
@@ -36,7 +37,7 @@
             android:paddingRight="10dp"
             android:paddingTop="10dp"
             android:text="TextView"
-            android:textSize="14dp" />
+            android:textSize="12dp" />
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -50,7 +51,7 @@
                 android:layout_width="0.0dip"
                 android:layout_height="fill_parent"
                 android:layout_weight="1.0"
-                android:drawableLeft="@drawable/content_copy"
+                android:drawable="@drawable/content_copy"
                 android:background="@color/white"
                 android:text="Copy" />
 
@@ -60,7 +61,7 @@
                 android:id="@+id/share"
                 android:layout_width="0.0dip"
                 android:layout_height="fill_parent"
-                android:drawableLeft="@drawable/share_android"
+                android:drawable="@drawable/share_android"
                 android:background="@color/white"
                 android:layout_weight="1.0"
                 android:text="Share" />
