--- a/app/src/main/res/menu/quotes_cell_menu.xml
+++ b/app/src/main/res/menu/quotes_cell_menu.xml
@@ -2,17 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_quote_copy"
-        android:orderInCategory="100"
-        android:icon="@drawable/menu_copy"
-        app:showAsAction="ifRoom"
-        android:title="Share this app"/>
+
     <item
         android:id="@+id/action_quote_share"
         android:icon="@drawable/menu_share"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
         android:title="Rate app on Google Play"/>
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="100"
+        android:title="Share this app"/>
+    <item
+        android:id="@+id/action_rate_us"
+        android:orderInCategory="100"
+        android:title="Rate app on Google Play"/>
+    <item
+        android:id="@+id/action_privacy_policy"
+        android:orderInCategory="100"
+        android:title="Privacy Policy"/>
+
+
 
 </menu>
