--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
+    <style name="myCustomToolBar" parent="AlertDialog.AppCompat">
+
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="android:textColor">@color/colorAccent</item>
+
+    </style>
 
 </resources>
