--- a/app/src/main/res/layout/quotes_card_activity.xml
+++ b/app/src/main/res/layout/quotes_card_activity.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <include
         android:id="@+id/main_app_bar"
         layout="@layout/app_bar" />
@@ -13,5 +13,6 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
 </LinearLayout>
