--- a/app/src/main/res/layout/quotes_cell.xml
+++ b/app/src/main/res/layout/quotes_cell.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:focusable="true"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
@@ -35,5 +36,6 @@
         android:textSize="14dp"
         android:text="TextView"
         />
+
 
 </LinearLayout>
